--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "token": "gib token pls",
-  "prefix": ">+"
+  "token": "MTE5NTUxMTYxMjg0MTQxNDcxNw.GWIg22.mCksG4-Qh8H2FuwOSOEFeZRunZ3-M9oi0K-gzs",
+  "prefix": "."
 }
