--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "token": "gib token pls",
-  "prefix": ">+"
+  "token": "MTE5NTUxMTYxMjg0MTQxNDcxNw.GDxZ9w.-isJeYxOYnfOounrJpRb45ND7oRMhGN3Th0NC8",
+  "prefix": "."
 }
